Added - Add/Edit location data - navigation livedata observables - RxJava for retrieving data from DB - Binder adapter for checked switch. - Location update listener for gps coordinates - Mock data of 2000 locations.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.EditLocationActivity"></activity>
-        <activity android:name=".ui.AddLocationActivity" />
+        <activity android:name=".ui.DetailLocationActivity"></activity>
+        <activity android:name=".ui.AddEditLocationActivity" />
         <activity android:name=".ui.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -22,6 +22,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service android:name=".LocationProviderManager" />
     </application>
 
 </manifest>
