--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.DetailLocationActivity"></activity>
+        <activity android:name=".ui.DetailLocationActivity"
+            android:parentActivityName=".ui.MainActivity"></activity>
         <activity android:name=".ui.AddEditLocationActivity" />
         <activity android:name=".ui.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
