--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,19 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.5.0'
 
+    //dagger
+    implementation 'com.google.dagger:dagger:2.21'
+    implementation 'com.google.dagger:dagger-android:2.21'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.21'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.21'
+    implementation 'com.google.dagger:dagger-android-support:2.21'
+
+    implementation 'com.squareup.okhttp3:okhttp:3.12.1'
+    implementation 'com.squareup.okio:okio:1.16.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.0'
+
+
+
 
 
     def lifecycle_version = "2.0.0"
