--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.gitzblitz.locationviewer">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
@@ -7,13 +8,15 @@
 
     <application
         android:allowBackup="true"
+        android:name=".LocationApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".ui.DetailLocationActivity"
-            android:parentActivityName=".ui.MainActivity"></activity>
+            android:parentActivityName=".ui.MainActivity"/>
         <activity android:name=".ui.AddEditLocationActivity" />
         <activity android:name=".ui.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -24,7 +27,7 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".LocationProviderManager" />
+        <service android:name=".utils.LocationProviderManager" />
     </application>
 
 </manifest>
