--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,23 @@ task clean(type: Delete) {
 }
 
 ext {
+    appCompatVersion ='1.1.0-alpha05'
+    constraintLayoutVersion ='2.0.0-beta1'
+    jUnitVersion = '4.13-beta-3'
+    testRunnerVersion ='1.2.0-beta01'
+    esspressoVersion = '3.2.0-beta01'
     roomVersion = '2.1.0-beta01'
     archLifecycleVersion = '2.0.0'
     pagingVersion = '2.1.0'
     materialDesign = '1.0.0'
-    cardView = '1.0.0'
+    cardViewVersion = '1.0.0'
+    daggerVersion = '2.21'
+    rxJavaVersion = '2.5.0'
+    rxAndroidVersion = '2.0.1'
+    retrofitVersion = '2.5.0'
+    okHttpVersion = '3.12.1'
+    okIoVersion = '1.16.0'
+    loggingInterceptorVerison = '3.12.0'
+    moshiVersion = '1.8.0'
+
 }
